--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ public/fonts/*
 !public/fonts/.gitkeep
 public/css/*
 !public/css/.gitkeep
+public/js/*
+!public/js/.gitkeep
 
 ### Django ###
 *.log
