--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "devDependencies": {
+    "browser-sync": "^1.8.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-bower": "0.0.7",
     "gulp-concat": "^2.4.2",
-    "gulp-livereload": "^3.0.2",
     "gulp-notify": "^2.1.0",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^1.0.2",
-    "http": "0.0.0",
-    "st": "^0.5.2"
+    "gulp-uglify": "^1.0.2"
   }
 }
